# mathlib-changelog

./: .gitignore  .vercelignore  CHANGELOG.2017.md  CHANGELOG.2018.md  CHANGELOG.2019.md  CHANGELOG.2020.md  CHANGELOG.2021.md  CHANGELOG.2022.md  CHANGELOG.full.txt  README.md
crawler/: pyproject.toml  setup.cfg
crawler/crawler/: DiffParser.py  crawl.py  extract_diff_info.py  parse_lean.py  stable_dedupe.py
crawler/crawler/formatters/: clean_commit_msg.py  format_commit_json.py  format_commit_md.py  format_commit_txt.py  format_datetime.py  format_git_changes_json.py  format_git_changes_md.py  format_git_changes_txt.py
crawler/crawler/parser/: DiffParser.py  errors.py  parse_lean.py  parse_lean_v3.py  parse_lean_v4.py  strip_lean_comments.py  types.py
crawler/tests/: test_crawler.py  test_extract_diff_info.py  test_parse_lean.py
crawler/tests/fixtures_v3/: algebra.lean
crawler/tests/fixtures_v4/: algebra.lean  cont_mdiff.lean  ess_sup.lean  fermat4.lean  filtered_colimits.lean  to_additive.lean
crawler/tests/parser/: test_parse_lean.py  test_parse_lean_v3.py  test_parse_lean_v4.py  test_strip_lean_comments.py
crawler/tests/parser/__snapshots__/: test_parse_lean.ambr  test_parse_lean_v4.ambr
markdown/: CHANGELOG.2017.07.md  CHANGELOG.2017.08.md  CHANGELOG.2017.09.md  CHANGELOG.2017.10.md  CHANGELOG.2017.11.md  CHANGELOG.2017.12.md  CHANGELOG.2018.01.md  CHANGELOG.2018.02.md  CHANGELOG.2018.03.md  CHANGELOG.2018.04.md  CHANGELOG.2018.05.md  CHANGELOG.2018.06.md  CHANGELOG.2018.07.md  CHANGELOG.2018.08.md  CHANGELOG.2018.09.md  CHANGELOG.2018.10.md  (+45 more)
(+54 files in other folders)
